2006-10-12 [colin]	2.5.5cvs2

	* src/compose.c
		Fix bug 1036, 'Forwarding a mutlipart
		mail with a "text/html" block to ms
		outlook users leeds to freeze of
		outlook'. Poor outlook users...

2006-10-12 [paul]	2.5.5cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-11 [paul]	2.5.4cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-11 [paul]	2.5.3cvs32

	* src/textview.c
		fix bug 1032, 'Segmentation fault when showing
		message' (bug in quote folding)
		Thanks to Colin

2006-10-10 [colin]	2.5.3cvs31

	* src/quote_fmt.c
		Rephrase english a bit

2006-10-10 [colin]	2.5.3cvs30

	* src/prefs_compose_writing.c
		Stop making the page larger than the window

2006-10-10 [wwp]	2.5.3cvs29

	* src/compose.c
	* src/prefs_template.c
	* src/quote_fmt.c
	* src/quote_fmt.h
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		Extend the quote parser a bit: allow to get access to
		basic (composing) account info.

2006-10-10 [colin]	2.5.3cvs28

	* src/procheader.c
		Fix this \t problem in subject

2006-10-09 [colin]	2.5.3cvs27

	* src/main.c
	* src/prefs_gtk.c
		Prepare cache a bit later
		If section already exists, skip the new one 
		(as previously); avoid writing the same block
		twice - if we find a second block with the 
		same id, skip it.
	* src/plugins/pgpcore/pgp_viewer.c
		Set cursor to busy when retrieving a key
	* src/plugins/pgpcore/sgpgme.c
		allow 5 seconds for gpg to export the key
		

2006-10-09 [colin]	2.5.3cvs26

	* configure.ac
	* src/msgcache.c
	* src/prefs_gtk.c
		Check for existence of fgets_unlocked
		and fwrite_unlocked

2006-10-09 [paul]	2.5.3cvs25

	* src/prefs_summaries.c
		replace strftime() with fast_strftime() and in
		the consequence fix the bug in the display of
		AM/PM in the 'Example' string

2006-10-09 [ticho]	2.5.3cvs24

	* po/sk.po
		Updated (and fixed up somewhat) Slovak translation.

2006-10-08 [colin]	2.5.3cvs23

	* src/prefs_folder_item.c